objects/tfn_Offset_Payment_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Interest__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interest</label>
        <referenceTo>loc03__Easement_FeeTitle__c</referenceTo>
        <relationshipLabel>Offset Payment Checklists</relationshipLabel>
        <relationshipName>Offset_Payment_Checklists</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Action_Descriptions_Notes__c</fullName>
        <inlineHelpText>Action description is consistent with OMP or considered appropriate</inlineHelpText>
        <label>Action Descriptions Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Action_consistent_with_OMP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Action description is consistent with OMP or considered appropriate</inlineHelpText>
        <label>Action consistent with OMP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_All_Man_Actions_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All management actions have been listed as completed</inlineHelpText>
        <label>All Man. Actions Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_All_Zones_have_been_reported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Zones have been reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Docs_Sent_To_Finance__c</fullName>
        <label>Docs Sent To Finance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Incomplete_action_followed_up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Any incomplete action (from previous year’s payment checklist) followed up with landowner.</inlineHelpText>
        <label>Incomplete action followed up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Issues_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issues Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Issues_Notes__c</fullName>
        <label>Issues Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Landowner_Met_Obligations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Landowner Met Obligations?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Landowner_Signature_Comments__c</fullName>
        <label>Landowner Signature Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Landowner_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Landowner has signed declaration</inlineHelpText>
        <label>Landowner Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_MF_Comments__c</fullName>
        <label>MF Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_MF_Received_Satisfactory__c</fullName>
        <label>MF Received  Satisfactory</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Management_Actions_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Management Actions Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Management_Actions_Notes__c</fullName>
        <label>Management Actions Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Offset_Checklist_ID__c</fullName>
        <displayFormat>OC{0000}</displayFormat>
        <label>Offset Checklist ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>tfn_Offset_Report_Fwd_Stewardship_Of__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Offset report forwarded to relevant Stewardship Officer</inlineHelpText>
        <label>Offset Report Fwd Stewardship Officer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Offset_Stewardship__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Offset Stewardship</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loc03__Monitoring__c.loc03__Easement_Fee_Title__c</field>
                <operation>equals</operation>
                <valueField>$Source.Interest__c</valueField>
            </filterItems>
            <filterItems>
                <field>loc03__Monitoring__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Offset Stewardship</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loc03__Monitoring__c</referenceTo>
        <relationshipLabel>Offset Payment Checklists</relationshipLabel>
        <relationshipName>Offset_Payment_Checklists</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_One_photo_point_for_each_zone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Submitted at least one photo point for each zone</inlineHelpText>
        <label>One photo point for each zone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_PP_Comments__c</fullName>
        <label>PP Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_PP_Received_Satisfactory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP Received  Satisfactory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Photo_Point_Notes__c</fullName>
        <label>Photo Point Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Photo_Points_Location_Notes__c</fullName>
        <label>Photo Points Location Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Photo_Points_Quality_Desc__c</fullName>
        <label>Photo Points Quality Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Photo_points_are_clear_quality__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Photo points are clear enough quality to assess vegetation condition</inlineHelpText>
        <label>Photo points are clear quality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Photos_location_consistent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Photos are in the same location or close enough to the same location as previous years</inlineHelpText>
        <label>Photos location consistent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Previous_Year_Actions_Comments__c</fullName>
        <label>Previous Year Actions Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Previous_Year_s_Issues_Comments__c</fullName>
        <label>Previous Year&apos;s Issues Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Previous_Year_s_Issues_Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous Year&apos;s Issues Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Recommend_releasing_payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommend releasing payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Recommended_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offset_Payment_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Registered_Proprietor_Checks_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered Proprietor Checks Done?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Stewardship_Officer_Comments__c</fullName>
        <inlineHelpText>Stewardship Officer Comments on Offset Report</inlineHelpText>
        <label>Stewardship Officer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Weeds_Comments__c</fullName>
        <label>Weeds Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Weeds_from_OMP_listed_in_Annual_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weeds from OMP listed in Annual Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Zones_Comments__c</fullName>
        <label>Zones Comments</label>
        <type>TextArea</type>
    </fields>
    <label>Offset Payment Checklist</label>
    <nameField>
        <label>Offset Payment Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offset Payment Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>